first mini store

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -388,6 +388,7 @@
   <app-preparations></app-preparations>
   <app-racing></app-racing>
   <app-sandbox></app-sandbox>
+  <app-mini-store></app-mini-store>
 
   <input type="hidden" #selection>
 
