--- a/src/app/components/mini-store/mini-store.component.html
+++ b/src/app/components/mini-store/mini-store.component.html
@@ -6,14 +6,21 @@
 </div>
 <div *ngIf="post | async as p">
 
- <h2> {{p.text}}</h2>
- <h4> Votes: {{p.likes}}</h4>
+  <h2> {{p.text}}</h2>
+  <h4> Votes: {{p.likes}} </h4>
+  <h4>Points: {{p.points}}</h4>
+  <div>
+    <button (click)="upvote()">Upvote</button>
+    <button (click)="downvote()">Downvote</button>
+    <button (click)="resetPost()">Reset</button>
 
- <button (click)="upvote()">Upvote</button>
- <button (click)="downvote()">Downvote</button>
- <button (click)="resetPost()">Reset</button>
-
- <input [(ngModel)] = "text">
- <button (click)="editText() ">Change Title</button>
+    <input [(ngModel)]="text">
+    <button (click)="editText() ">Change Title</button>
+  </div>
+  <div>
+    <button (click)="uppoint()"> + half points</button>
+    <button (click)="downpoint()"> - half points</button>
+    <button (click)="cleanpoint()"> clean points</button>
+  </div>
 
 </div>
